Updated EventItem to Event in description of class type to create

--- a/Instructions/20532B_LAB_04.md
+++ b/Instructions/20532B_LAB_04.md
@@ -149,7 +149,7 @@ The main tasks for this exercise are as follows:
 
 2. Add a **using** statement for the **Contoso.Events.Models** namespace.
 
-3. At the end of the **Seed** method, create an instance of the **EventItem** class by using the following values:
+3. At the end of the **Seed** method, create an instance of the **Event** class by using the following values:
 
   - EventKey: **"FY17SepGeneralConference"**
 
@@ -163,7 +163,7 @@ The main tasks for this exercise are as follows:
 
   - RegistrationCount: **1**
 
-4. At the end of the **Seed** method, add the newly created **EventItem** to the **context.Events** collection.
+4. At the end of the **Seed** method, add the newly created **Event** to the **context.Events** collection.
 
 5. At the end of the **Seed** method, create an instance of the **Registration** class by using the following values:
 
