Corrected xml snippet

--- a/Instructions/20532B_LAB_06.md
+++ b/Instructions/20532B_LAB_06.md
@@ -188,21 +188,15 @@ The main tasks for this exercise are as follows:
 2.  Replace the content of the **App.config** file with the following
     XML code:
 
-\<?xml version="1.0" encoding="utf-8"?\>
-
-\<configuration\>
-
-\<connectionStrings\>
-
-\<add name="EventsContextConnectionString" connectionString="Data
-Source=(localdb)\\v11.0;Initial
-Catalog=EventsContextModule6Lab;Pooling=True;Integrated Security=True"
-providerName="System.Data.SqlClient" /\>
-
-\</connectionStrings\>
-
-\</configuration
-\>  
+  \<?xml version="1.0" encoding="utf-8"?\>
+     \<configuration\>
+       \<connectionStrings\>
+         \<add name="EventsContextConnectionString" connectionString="Data
+              Source=(localdb)\\v11.0;Initial
+              Catalog=EventsContextModule6Lab;Pooling=True;Integrated Security=True"
+              providerName="System.Data.SqlClient" /\>
+        \</connectionStrings\>
+      \</configuration\>  
 
 **Results**: After completing this exercise, you will have created a
 Worker Role class library and implement the appropriate pattern for a
