Added guide to overwrite the content from WorkerRole.cs

--- a/Instructions/20532B_LAB_06.md
+++ b/Instructions/20532B_LAB_06.md
@@ -173,8 +173,7 @@ The main tasks for this exercise are as follows:
 ####Task 4:	Implement the run logic to get requests from the SQL database
 
 
-1.  Add the **WorkerRole.cs** file to the **Contoso.Events.Worker**
-    project:
+1.  Overwrite the content of **WorkerRole.cs** with the content from the file at:
 
 
 
