--- a/Instructions/20532B_LAB_07.md
+++ b/Instructions/20532B_LAB_07.md
@@ -141,13 +141,11 @@ parameters:
 
 
 >
-  IEnumerable\<string\> names = from r in registrations
-
+    IEnumerable\<string\> names = from r in registrations
 >
-  orderby r.LastName, r.FirstName
-
->  select r.FirstName + ", " + r.LastName; 
-
+    orderby r.LastName, r.FirstName
+>
+    select r.FirstName + ", " + r.LastName; 
 
 
 Return the LINQ query as the result of the **GetRegistrantsNames**
@@ -231,7 +229,7 @@ registration from the table.
 
         Guid rowKey = Guid.Parse(registration.RowKey);
         
-        Return rowKey;
+        return rowKey;
 
 
 
