Make code snippets look better

--- a/Instructions/20532B_LAB_08.md
+++ b/Instructions/20532B_LAB_08.md
@@ -208,10 +208,10 @@ project.
 Create a *CloudBlobContainer* variable for the **signin** container and
  ensure that the container exists by using the following code:
 
-CloudBlobContainer container =
-\_blobClient.GetContainerReference("signin");
+    CloudBlobContainer container =
+        _blobClient.GetContainerReference("signin");
 
-container.CreateIfNotExists();
+    container.CreateIfNotExists();
 
 
 
@@ -223,11 +223,11 @@ Seek method on the **MemoryStream** to set the position back to the
 beginning (Origin), and then upload the stream to the blob by using the
 **UploadFromStream** method as shown in the following code:
 
-ICloudBlob blob = container.GetBlockBlobReference(blobName);
+    ICloudBlob blob = container.GetBlockBlobReference(blobName);
 
-stream.Seek(0, SeekOrigin.Begin);
+    stream.Seek(0, SeekOrigin.Begin);
 
-blob.UploadFromStream(stream);
+    blob.UploadFromStream(stream);
 
 
 
@@ -285,12 +285,12 @@ instance, create a *CloudBlobContainer* variable for the **signin**
 container, and then ensure that the container exists as shown in the
 following code:
 
-CloudBlobClient blobClient =\_storageAccount.CreateCloudBlobClient();
+    CloudBlobClient blobClient = _storageAccount.CreateCloudBlobClient();
 
-CloudBlobContainer container =
-blobClient.GetContainerReference("signin");
+    CloudBlobContainer container =
+        blobClient.GetContainerReference("signin");
 
-container.CreateIfNotExists();
+    container.CreateIfNotExists();
 
 
 
@@ -298,9 +298,9 @@ Create a blob reference by using the new **blobName** variable, and then
 use the **OpenReadAsync** method to create a *Stream* variable as shown
 in the following code:
 
-ICloudBlob blob = container.GetBlockBlobReference(\_blobId);
+    ICloudBlob blob = container.GetBlockBlobReference(_blobId);
 
-Stream blobStream = await blob.OpenReadAsync();
+    Stream blobStream = await blob.OpenReadAsync();
 
 
 
@@ -429,12 +429,12 @@ Use the *\_storageAccount* variable to create a new **CloudBlobClient**,
 create a *CloudBlobContainer* variable for the **signin** container, and
 then ensure that the container exists as shown in the following code:
 
-CloudBlobClient blobClient = \_storageAccount.CreateCloudBlobClient();
+    CloudBlobClient blobClient = _storageAccount.CreateCloudBlobClient();
 
-CloudBlobContainer container =
-blobClient.GetContainerReference("signin");
+    CloudBlobContainer container =
+        blobClient.GetContainerReference("signin");
 
-container.CreateIfNotExists();
+    container.CreateIfNotExists();
 
 
 
@@ -442,11 +442,11 @@ Create a new instance of the **SharedAccessBlobPolicy** class, set the
  expiry time to 15 minutes from the current time, and then set the blob
 permission to read as shown in the following code:
 
-SharedAccessBlobPolicy blobPolicy = new SharedAccessBlobPolicy();
+    SharedAccessBlobPolicy blobPolicy = new SharedAccessBlobPolicy();
 
-blobPolicy.SharedAccessExpiryTime = DateTime.Now.AddHours(0.25d);
+    blobPolicy.SharedAccessExpiryTime = DateTime.Now.AddHours(0.25d);
 
-blobPolicy.Permissions = SharedAccessBlobPermissions.Read;
+    blobPolicy.Permissions = SharedAccessBlobPermissions.Read;
 
 
 
@@ -455,12 +455,12 @@ Create a new instance of the **BlobContainerPermissions** class, add the
 **“ReadBlobPolicy”**, and then disable public access as shown in the
 following code:
 
-BlobContainerPermissions blobPermissions = new
-BlobContainerPermissions();
+    BlobContainerPermissions blobPermissions = 
+        new BlobContainerPermissions();
 
-blobPermissions.SharedAccessPolicies.Add("ReadBlobPolicy", blobPolicy);
+    blobPermissions.SharedAccessPolicies.Add("ReadBlobPolicy", blobPolicy);
 
-blobPermissions.PublicAccess = BlobContainerPublicAccessType.Off;
+    blobPermissions.PublicAccess = BlobContainerPublicAccessType.Off;
 
 
 
@@ -469,19 +469,19 @@ method to apply the *BlobContainerPermissions* variable, and then
 generate a SAS token by using the **GetSharedAccessSignature** method as
  shown in the following code:
 
-await container.SetPermissionsAsync(blobPermissions);
+    await container.SetPermissionsAsync(blobPermissions);
 
-string sasToken = container.GetSharedAccessSignature(new
-SharedAccessBlobPolicy(), "ReadBlobPolicy");
+    string sasToken = container.GetSharedAccessSignature(
+        new SharedAccessBlobPolicy(), "ReadBlobPolicy");
 
 
 
 Create a blob reference by using the *\_blobId* variable, and then store
 the Blob’s Uri in a *Uri* variable as shown in the following code:
 
-ICloudBlob blob = container.GetBlockBlobReference(\_blobId);
+    ICloudBlob blob = container.GetBlockBlobReference(_blobId);
 
-Uri blobUrl = blob.Uri;
+    Uri blobUrl = blob.Uri;
 
 Concatenate the *Uri* variable’s **AbsoluteUri** property with the
 **sasToken**, and then return the new string as the result of the
