Minor corrections to powershell

--- a/Instructions/20532B_LAB_11.md
+++ b/Instructions/20532B_LAB_11.md
@@ -164,8 +164,7 @@ Open the **Microsoft Azure PowerShell** console window.
 
 
 
-          Import-AzurePublishSettings File
-          F:\\Mod11\\Labfiles\\20532.publishsettings
+        Import-AzurePublishSettings F:\Mod11\Labfiles\20532.publishsettings
 
 
 
@@ -257,7 +256,7 @@ The main tasks for this exercise are as follows:
 
 5.  View the newly created Website by using the following command:
 
-          explorer “http://[Host Name]”
+          explorer "http://[Host Name]"
 
 
 6.   Close Internet Explorer.
@@ -444,7 +443,7 @@ The main tasks for this exercise are as follows:
 
 
 
-          explorer “http://[Host Name]”
+          explorer "http://[Host Name]"
 
 
 6.  Close Internet Explorer.
