--- a/Instructions/20532B_LAB_12.md
+++ b/Instructions/20532B_LAB_12.md
@@ -177,7 +177,7 @@ Add a new user to your directory by using the following details:
 >  Type of User: **New user in your organization**
 
 >
-  User Name: **admin **
+  User Name: **admin**
 
 >
   Domain: **ad20532[*Your Name*]**
@@ -282,13 +282,12 @@ The main tasks for this exercise are as follows:
 
 
 
->  File location: **Allfiles
-> (F):\\Mod12\\Labfiles\\Starter\\Contoso.Events
+>  File location: **Allfiles (F):\\Mod12\\Labfiles\\Starter\\Contoso.Events**
 
 
 
 Open the **HomeController.cs** file in the
-**Contoso.Events.Management.Old** project*.
+**Contoso.Events.Management.Old** project.
 
 
 Add the **Authorize** attribute to the **HomeController** class.
@@ -376,9 +375,7 @@ using an organizational account.
   >
      **Note:** When associating your new ASP.NET Web
   > Application project with an Azure AD domain, you must sign in by using
-   an account that has a Global Administrator role.** 
-  
-  **
+   an account that has a Global Administrator role.
 
 2.  Set the **Contoso.Events.Management** project as the startup project.
 
