--- a/Instructions/20532B_LAB_13.md
+++ b/Instructions/20532B_LAB_13.md
@@ -313,11 +313,9 @@ configurations with the following values:
 >  Type: **String**
 
 >
-  Value: [**The SAS** **Connection String recorded in the previous
- Task]
-
-**
-
+  Value: [**The SAS Connection String recorded in the previous
+ Task]**
+ 
 For the **Cloud** service configuration, locate the
 **Microsoft.WindowsAzure.Storage.ConnectionString** settings, and then 
 set the connection string by using the **Storage Account Name** and
@@ -474,9 +472,9 @@ Publish the cloud service with the following values:
 >  Web App Name: **ws20532[*Your Name*]**.
 
 >
-  Resource Group: **Select the Resource Group **.
+  Resource Group: **Select the Resource Group**.
 >
-  App Service Plan : ** Select the App Service Plan **.
+  App Service Plan : **Select the App Service Plan**.
 
 >
   Database server: **No database**
