Fixed major formatting issues related to line-breaks from Word

--- a/Instructions/dotnet/Mod04/20532B_LAB_04.md
+++ b/Instructions/dotnet/Mod04/20532B_LAB_04.md
@@ -89,29 +89,29 @@ servers and databases in the SQL Database service.
 
 In this exercise, you will:
 
-* Configure an Entity Framework Code First **DatabaseInitializer**.
+  * Configure an Entity Framework Code First **DatabaseInitializer**.
 
-* Implement a **Seed** method for the initializer.
+  * Implement a **Seed** method for the initializer.
 
-* Publish a Web App application.
+  * Publish a Web App application.
 
-* View tables and data by using the Azure SQL Database Management Portal.
+  * View tables and data by using the Azure SQL Database Management Portal.
 
 The main tasks for this exercise are as follows:
 
-1. Run the ASP.NET web application to view events from the local SQL database.
+  1. Run the ASP.NET web application to view events from the local SQL database.
 
-2. Configure DbContext with a new DatabaseInitializer.
+  2. Configure DbContext with a new DatabaseInitializer.
 
-3. Implement seed data with DbContext.
+  3. Implement seed data with DbContext.
 
-4. Publish the cloud application with updated DbContext to Azure.
+  4. Publish the cloud application with updated DbContext to Azure.
 
-5. Verify that the Azure Web App website is using the new data.
+  5. Verify that the Azure Web App website is using the new data.
 
-6. Sign in to the Azure Management Portal.
+  6. Sign in to the Azure Management Portal.
 
-7. View the migrated data in the Azure SQL Management Portal.
+  7. View the migrated data in the Azure SQL Management Portal.
 
 #### Task 1:	Run the ASP.NET web application to view events from the local SQL database
 
@@ -131,21 +131,23 @@ The main tasks for this exercise are as follows:
 
 2. Update the **EventsContextInitializer** class with the **public** accessor.
 
-3. Update the **EventsContextInitializer** class to inherit from the **DbMigrationsConfiguration\<EventsContext\>** class.
+3. Update the **EventsContextInitializer** class to inherit from the **DbMigrationsConfiguration&lt;EventsContext&gt;** class.
 
 4. Add a **using** statement for the **Contoso.Events.Models** namespace.
 
 5. Update the **EventsContext** static constructor with the following lines of code:
 
-  Database.SetInitializer\<EventsContext\>(
+  ```
+  Database.SetInitializer<EventsContext>(
 
-    new MigrateDatabaseToLatestVersion\<EventsContext, EventsContextInitializer\>()
+    new MigrateDatabaseToLatestVersion<EventsContext, EventsContextInitializer>()
 
   );
+  ```
 
 #### Task 3:	Implement seed data with DbContext
 
-1. Override the **Seed** method of the **DbMigrationsConfiguration\<\>** class.
+1. Override the **Seed** method of the **DbMigrationsConfiguration&lt;&gt;** class.
 
 2. Add a **using** statement for the **Contoso.Events.Models** namespace.
 
