--- a/Instructions/dotnet/Mod03/20532B_LAB_03.md
+++ b/Instructions/dotnet/Mod03/20532B_LAB_03.md
@@ -1,6 +1,6 @@
 # Module 3: Hosting Web Applications on the Azure Platform
 
-# Lab: Creating an ASP.NET Website by Using Azure Web App
+# Lab: Creating an ASP.NET Website Using an Azure Web App
 
 ### Scenario
 
@@ -163,7 +163,9 @@ The main tasks for this exercise are as follows:
   - App Setting Key: **EventsListViewModel.EventCount**
 
 3. Add an app setting to the root of the **Web.config** for the
- **Contoso.Events.Management** project:-   App Setting Key: **EventsListViewModel.EventCount**
+ **Contoso.Events.Management** project:
+
+  - App Setting Key: **EventsListViewModel.EventCount**
 
   - App Setting Value: **5**
 
