--- a/Instructions/dotnet/Mod04/20532B_LAB_AK_04.md
+++ b/Instructions/dotnet/Mod04/20532B_LAB_AK_04.md
@@ -1,529 +1,310 @@
-﻿# Module 4: Storing SQL Data in Azure
-
-
+# Module 4: Storing SQL Data in Azure
 
 # Lab: Storing Event Data in Azure SQL Databases
 
+## Exercise 1: Creating an Azure SQL Databases Instance
 
+#### Task 1: Sign in to the Azure Portal
 
-## Exercise 1:	Creating an Azure SQL Databases Instance
+1.  On the Start screen, click the **Internet Explorer** tile.
 
+2.  Go to <https://portal.azure.com>.
 
+3.  In the email address box, type the email address of your Microsoft account.
 
-#### Task 1:	Sign in to the Azure Portal
+4.  Click Continue.
 
-1. On the Start screen, click the
-**Internet Explorer** tile.
+5.  In the password box, type your password for your Microsoft account.
 
+6.  Click **Sign In**.
 
-2. Go to
- <https://portal.azure.com>.
+#### Task 2: Create an Azure SQL database by using the Azure Portal
 
+1.  In the navigation pane on the left side, scroll down, and then click **Browse**.
 
-3. In the email address box, type
- the email address of your Microsoft account.
+2.  In the **Browse** blade that displays, click **SQL databases**.
 
+3.  At the top-left corner of the portal, click **New**.
 
-4. Click Continue.
+4.  In the **New** blade that displays, click **Data + Storage**, and then **SQL Database** from **Data + Storage** blade.
 
+5.  In the **SQL database** blade that displays, perform the following steps:
 
-5. In the password box, type your
-password for your Microsoft account.
+    a. In the **Name** box, type **db20532\[*Your Name Here*\]**.
 
+    b. Click **Pricing Tier**.
 
-6. Click **Sign In**.
+    c. In the **Recommended pricing tier** blade that displays, select **Basic**.
 
+    d. Click **Select** to close the blade.
 
+6.  Click **Select Source**.
 
-#### Task 2:	Create an Azure SQL database by using the Azure Portal
+7.  Select the **Blank Database** option.
 
-1.  In the navigation pane on
- the left side, scroll down, and then click **Browse**.
+8.  In the **SQL database** blade, click **Server**.
 
+9.  In the **Server** blade that displays, click **Create a new server**.
 
-2. In the **Browse** blade that
- displays, click **SQL databases**.
+10. In the **New Server** blade that displays, locate the **Server Name** box.
 
+11. In the **Server Name** box, type **sv20532\[*Your Name Here*\]**.
 
-3. At the top-left corner of
- the portal, click **New**.
+12. In the **Server Admin Login** box, type **testuser**.
 
-4. In the **New** blade that displays, click **Data + Storage**, and then **SQL Database** from **Data + Storage** blade.
+13. In the **Password** box, type **TestPa\\$\\$w0rd**.
 
+14. In the **Confirm Password** box, type **TestPa\\$\\$w0rd**.
 
-5. In the **SQL database** blade
-that displays, perform the following steps:
+15. Click **Location**.
 
+16. In the **Location** blade that displays, select the region that is closest to your location.
 
-6. In the **Name** box, type
-**db20532[*Your Name Here*]**.
+17. In the **New server** blade, click **OK**.
 
-7. Click **Pricing Tier**.
+18. In the **SQL database** blade, click **Create** to create the SQL database and server.
 
-8. In the **Recommended pricing
-tier** blade that displays, select **Basic**.
+19. Write down the name of the new SQL database.
 
-9. Click **Select** to close the
- blade.
+> **Results**: After completing this exercise, you will have created both servers and databases in the SQL Database service.
 
-10. Click **Select Source**.
+## Exercise 2: Using Entity Framework with Azure SQL Databases
 
-11. Select the **Blank Database**
-option.
+#### Task 1: Run the ASP.NET web application to view events from the local SQL database
 
-12. In the **SQL database** blade,
-click **Server**.
+1.  On the Start screen, click the **Desktop** tile.
 
-13. In the **Server** blade that
-displays, click **Create a new server**.
+2.  On the taskbar, click the **File Explorer** icon.
 
-14. In the **New Server** blade
-that displays, locate the **Server Name** box.
+3.  In the Libraries window, go to **Allfiles (F):\\Mod04\\Labfiles\\Starter\\Contoso.Events**, and then double-click **Contoso.Events.sln**.
 
-15. In the **Server Name** box,
- type **sv20532[*Your Name Here*]**.
+4.  In the **Solution Explorer** pane, right-click the **Contoso.Events.DataGeneration** project, point to **Debug**, and then click **Start New Instance**.
 
-16. In the **Server Admin Login**
-box, type **testuser**.
+    > **Note:** The Data Generation script takes between one to two minutes to run.
 
-17. In the **Password** box, type
-**TestPa\$\$w0rd**.
+5.  In the **Solution Explorer** pane, right-click the **Contoso.Events.Cloud** project, and then click **Set as Startup Project**.
 
-18. In the **Confirm Password**
-box, type **TestPa\$\$w0rd**.
+6.  On the **Debug** menu, click **Start Debugging**.
 
-19. Click **Location**.
+7.  On the home page of the web application, verify that it shows a list of multiple events.
 
-20. In the **Location** blade that
- displays, select the region that is closest to your location.
+8.  Close the tab that is displaying the website.
 
-21. In the **New server** blade,
- click **OK**.
+#### Task 2: Configure DbContext with a new DatabaseInitializer
 
-22. In the **SQL database** blade, click **Create** to create the SQL
- database and server.
+1.  In the **Solution Explorer** pane, right-click the **Contoso.Events.Data** project, point to **Add,** and then click **NewItem**.
 
-23. Write down the name of the new
-SQL database.
+2.  In the **Add New Item** dialog box, perform the following steps:
 
->  **Results**: After completing this exercise, you will have created both
-servers and databases in the SQL Database service.
+    a. Expand **Installed**, expand **Visual C\# Items**, and then click **Code**.
 
+    b. Click the **Class** template.
 
-## Exercise 2:	Using Entity Framework with Azure SQL Databases
+    c. In the **Name** box, type **EventsContextInitializer.cs**.
 
+    d. Click **Add**.
 
+3.  In the **EventsContextInitializer** class, add the **public** accessor to the left of the class definition:
 
-#### Task 1:	Run the ASP.NET web application to view events from the local SQL database
+    ```
+    class EventsContextInitializer
+    ```
 
+4.  Verify that the updated class definition looks like the following line of code:
 
-1.  On the Start screen, click
- the **Desktop** tile.
+    ```
+    public class EventsContextInitializer
+    ```
 
+5.  In the **EventsContextInitializer** class, add the **DbMigrationsConfiguration&lt;EventsContext&gt;** inheritance statement to the right of the class definition:
 
-2. On the taskbar, click the
-**File Explorer** icon.
+    ```
+    public class EventsContextInitializer
+    ```
 
-3. In the Libraries window, go to
-**Allfiles (F):\\Mod04\\Labfiles\\Starter\\Contoso.Events**, and
- then double-click **Contoso.Events.sln**.
+6.  Verify that the updated class definition looks like the following line of code:
 
-4. In the **Solution Explorer**
-pane, right-click the **Contoso.Events.DataGeneration** project, point
-to **Debug**, and then click **Start New Instance**.
+    ```
+    public class EventsContextInitializer : DbMigrationsConfiguration<EventsContext>
+    ```
 
+7.  Add these **using** statements at the top of the code file:
 
- >  **Note:** The Data Generation script takes between one to two minutes
- to run.
+    ```
+    using System.Data.Entity; using System.Data.Entity.Migrations;
+    ```
 
-5. In the **Solution Explorer**
-pane, right-click the **Contoso.Events.Cloud** project, and then click
-**Set as Startup Project**.
+8.  In the Solution Explorer pane, expand the **Contoso.Events.Data** project.
 
-6. On the **Debug** menu, click
-**Start Debugging**.
+9.  In the **Contoso.Events.Data** project, open the **EventsContext.cs** file.
 
-7. On the home page of the web
- application, verify that it shows a list of multiple events.
+10. Within the static constructor **static EventsContext()**, add the following line of code:
 
-8. Close the tab that is
-displaying the website.
-
-#### Task 2:	Configure DbContext with a new DatabaseInitializer
-
-1.  In the **Solution
- Explorer** pane, right-click the **Contoso.Events.Data** project,
- point to **Add,** and then click **NewItem**.
-
-
-2. In the **Add New Item** dialog
- box, perform the following steps:
-
- a.  Expand **Installed**, expand **Visual C\# Items**, and then click **Code**.
-
- b. Click the **Class** template.
-
- c. In the **Name** box, type
-**EventsContextInitializer.cs**.
-
- d. Click **Add**.
-
-3. In the
-**EventsContextInitializer** class, add the **public** accessor to the
-left of the class definition:
-
- class EventsContextInitializer
-
-4. Verify that the updated class
-definition looks like the following line of code:
-
-
- public class EventsContextInitializer
-
-
-5. In the
-**EventsContextInitializer** class, add the
-**DbMigrationsConfiguration\<EventsContext\>** inheritance statement to
- the right of the class definition:
-
-
- public class EventsContextInitializer
-
-
-6. Verify that the updated class
-definition looks like the following line of code:
-
-
- public class EventsContextInitializer :
-DbMigrationsConfiguration\<EventsContext\>
-
-
-7. Add thest **using** statements at
-the top of the code file:
-
- using System.Data.Entity;
- 
- using System.Data.Entity.Migrations;
-
-8. In the Solution Explorer pane,
-expand the **Contoso.Events.Data** project.
-
-9. In the **Contoso.Events.Data**
-project, open the **EventsContext.cs** file.
-
-10. Within the static constructor
-**static EventsContext()**, add the following line of code:
-
- Database.SetInitializer\<EventsContext\>(new
-MigrateDatabaseToLatestVersion\<EventsContext, EventsContextInitializer\>());
-
+    ```
+    Database.SetInitializer<EventsContext>(new MigrateDatabaseToLatestVersion<EventsContext, EventsContextInitializer>());
+    ```
 
 11. Save the EventsContext.cs file.
 
+#### Task 3: Implement seed data with DbContext
 
+1.  In the Solution Explorer pane, expand the **Contoso.Events.Data** project.
 
-#### Task 3:	Implement seed data with DbContext
+2.  In the **Contoso.Events.Data** project, open the **EventsContextInitializer.cs** file.
 
+3.  Add the following method to the **EventsContextInitializer** class:
 
-1.  In the Solution Explorer
- pane, expand the **Contoso.Events.Data** project.
+    ```
+    protected override void Seed(EventsContext context){ }
+    ```
 
+4.  Add the following **using** statements at the top of the code file:
 
-2. In the **Contoso.Events.Data**
-project, open the **EventsContextInitializer.cs** file.
+    ```
+    using Contoso.Events.Models; using System.Data.Entity.Migrations;
+    ```
 
+5.  Add the public constructor method for EventsContextInitializer by typing the following lines of code.
 
-3. Add the following method to the
-**EventsContextInitializer** class:
+    ```
+    public EventsContextInitializer(){ AutomaticMigrationsEnabled = true;}
+    ```
 
+6.  Place the cursor before the closing parenthesis of the **Seed(EventsContext context)** method, and then type the following lines of code:
 
- protected override void Seed(EventsContext context)
+    ```
+    if (context.Events.Count() == 0){ Event eventItem = new Event(); eventItem.EventKey = "FY17SepGeneralConference"; eventItem.StartTime = DateTime.Today; eventItem.EndTime = DateTime.Today.AddDays(3d); eventItem.Title = "FY17 September Technical Conference"; eventItem.Description = "Sed in euismod mi."; eventItem.RegistrationCount = 1; context.Events.Add(eventItem);}
+    ```
 
- {
+7.  Place the cursor before the closing parenthesis of the **Seed(EventsContext context)** method, and then type the following lines of code:
 
+    ```
+    if (context.Registrations.Count() == 0){ Registration registrationItem = new Registration(); registrationItem.EventKey = "FY17SepGeneralConference"; registrationItem.FirstName = "Aisha"; registrationItem.LastName = "Witt"; context.Registrations.Add(registrationItem);}
+    ```
 
+8.  Place the cursor before the closing parenthesis of the **Seed(EventsContext context)** method, and then type the following line of code:
 
- }
+    ```
+    context.SaveChanges();
+    ```
 
-4. Add the following **using**
-statements at the top of the code file:
+9.  Save the EventsContextInitializer.cs file.
 
+10. In the Solution Explorer pane, right-click the **Contoso.Events.Data** project, and then click **Build**.
 
- using Contoso.Events.Models;
- 
- using System.Data.Entity.Migrations;
+#### Task 4: Publish the cloud application with updated DbContext to Azure
 
-5. Add the public constructor method for EventsContextInitializer by typing the following lines of code. 
+1.  In the **Solution Explorer** pane, expand the **Contoso.Events.Web** project.
 
- public EventsContextInitializer()
- 
- {
- 
-   AutomaticMigrationsEnabled = true;
- 
- }
+2.  In the **Solution Explorer** pane, expand the **Web.config** file in the **Contoso.Events.Web** project.
 
-6. Place the cursor before the
-closing parenthesis of the **Seed(EventsContext context)** method, and
-then type the following lines of code:
+3.  Double-click the **Web.Release.config** file.
 
- if (context.Events.Count() == 0)
- 
- {
- 
-   Event eventItem = new Event();
+4.  In the **Web.Release.config** file, update the connection string with the key **EventsContextConnectionString** with the following values:
 
-   eventItem.EventKey = "FY17SepGeneralConference";
+    -   \[database\]: **db20532\[*Your Name Here*\]**
 
-   eventItem.StartTime = DateTime.Today;
+    -   \[login\]: **testuser**
 
-   eventItem.EndTime = DateTime.Today.AddDays(3d);
+    -   \[server\]: **sv20532\[*Your Name Here*\]**. Note there are two different places to replace \[server\].
 
-   eventItem.Title = "FY17 September Technical Conference";
+    -   \[password\]: **TestPa\\$\\$w0rd**
 
-   eventItem.Description = "Sed in euismod mi.";
+5.  Save the **Web.Release.config** file.
 
-   eventItem.RegistrationCount = 1;
-   
-   context.Events.Add(eventItem);
-   
- }
+6.  In the **Solution Explorer** pane, right-click the **Contoso.Events.Cloud** project, and then click **Publish**.
 
-7. Place the cursor before the
- closing parenthesis of the **Seed(EventsContext context)** method, and
-then type the following lines of code:
+7.  In the **Publish Azure Application** dialog box, perform the following steps:
 
- if (context.Registrations.Count() == 0)
- 
- {
- 
-   Registration registrationItem = new Registration();
+    a. If you have not selected a subscription before, perform the following steps:
 
-   registrationItem.EventKey = "FY17SepGeneralConference";
+    b. If prompted, sign in with your Microsoft account.
 
-   registrationItem.FirstName = "Aisha";
+    c. Locate the **Choose your subscription** list, and then select your Azure subscription.
 
-   registrationItem.LastName = "Witt";
+    d. Click **Next**.
 
-   context.Registrations.Add(registrationItem);
-  
- }
+    e. If you selected a subscription in the past, you will be directed to the **Windows Azure Publish Settings** step in the wizard.
 
-8. Place the cursor before the
-closing parenthesis of the **Seed(EventsContext context)** method, and
-then type the following line of code:
+    f. Open the **Create Cloud Service** **and Storage Account** dialog box.
 
+    g. If you do not have any existing Web App, the **Create Web App** **and Storage Account** dialog box displays.
 
- context.SaveChanges();
+    h. If you have existing cloud services, locate the **Web App** list, and then select **Create New** to open the dialog box.
 
-9. Save the
-EventsContextInitializer.cs file.
+8.  In the **Create Web App and Storage Account** dialog box, perform the following steps:
 
+    a. In the **Name** box, type **cs20532\[*Your Name*\]**.
 
+    b. In the **Region or Affinity Group** list, select the region that is closest to your location. **Ensure** that this region is same as the *\*region* where you created SQL Database.
 
-10. In the Solution Explorer pane,
-right-click the **Contoso.Events.Data** project, and then click
-**Build**.
+    c. Click **Create**.
 
+9.  In the **Microsoft Azure Publish Settings** dialog box, perform the following steps:
 
-
-#### Task 4:	Publish the cloud application with updated DbContext to Azure
-
-
-1.  In the **Solution
- Explorer** pane, expand the **Contoso.Events.Web** project.
-
-
-2. In the **Solution Explorer**
-pane, expand the **Web.config** file in the **Contoso.Events.Web**
-project.
-
-3. Double-click the
-**Web.Release.config** file.
-
-
-4. In the **Web.Release.config**
-file, update the connection string with the key
-**EventsContextConnectionString** with the following values:
-
-
-
- -   [database]: **db20532[*Your
-    Name Here*]**
-
-
- -   [login]: **testuser**
-
- -   [server]: **sv20532[*Your
-    Name Here*]**. Note there are two different places to replace [server].
-
-
- -   [password]:
-    **TestPa\$\$w0rd**
-
-
-
-5. Save the **Web.Release.config**
-file.
-
-
-6. In the **Solution Explorer**
-pane, right-click the **Contoso.Events.Cloud** project, and then click
-**Publish**.
-
-
-7. In the **Publish Azure
-Application** dialog box, perform the following steps:
-
- a.  If you have not selected a
- subscription before, perform the following steps:
-
-
- b. If prompted, sign in with your
-Microsoft account.
-
- c. Locate the **Choose your
-subscription** list, and then select your Azure subscription.
-
- d. Click **Next**.
-
- e. If you selected a subscription
-in the past, you will be directed to the **Windows Azure Publish
-Settings** step in the wizard.
-
- f. Open the **Create Cloud
-Service** **and Storage Account** dialog box.
-
- g.  If you do not have any
- existing Web App, the **Create Web App** **and Storage Account** dialog box displays.
-
- h. If you have existing cloud
- services, locate the **Web App** list, and then select **Create
-New** to open the dialog box.
-
-8. In the **Create Web App
- and Storage Account** dialog box, perform the following steps:
-
- a.  In the **Name** box, type
- **cs20532[*Your Name*]**.
-
-
- b. In the **Region or Affinity
-Group** list, select the region that is closest to your location. **Ensure** that this region is same as the **region* where you created SQL Database.
-
-
- c. Click **Create**.
-
-
-9. In the **Microsoft Azure
-Publish Settings** dialog box, perform the following steps:
-
-
- a.  Leave the default values in
- all the fields.
+    a. Leave the default values in all the fields.
 
 10. Click **Publish**.
 
+> **Note:** It typically takes five to ten minutes for the publish process to complete. You can track the progress of your publish in the Microsoft Azure Activity Log (**View** &gt; **Other Windws** &gt; **Microsoft Azure Activity Log**) pane that displays when you publish your Web App project.
 
+#### Task 5: Verify that the Azure Web App website is using the new data
 
->  **Note:** It typically takes five to ten minutes for the publish
- process to complete. You can track the progress of your publish in the
- Microsoft Azure Activity Log (**View** \> **Other Windws** \> **Microsoft Azure Activity Log**)
- pane that displays when you publish your Web App project.
+1.  Wait for the publish process to complete and the console window to display the message **Complete**.
 
+    > **Note:** The publish process is complete when the message “**Complete”** displays in the **Microsoft Azure Activity Log**’s history console. The green circular indicator in the Activity Log does not indicate that the publish process is complete, but it indicates that the package is uploaded successfully.
 
+2.  In the **Microsoft Azure Activity Log** console, click the hyperlink that directs you to the published web application.
 
-#### Task 5:	Verify that the Azure Web App website is using the new data
+3.  Verify that the website displays the single event that you created in your Entity Framework context initializer.
 
+#### Task 6: Sign in to the Azure Management Portal
 
+1.  On the Start screen, click the **Internet Explorer** tile.
 
-1.  Wait for the publish
- process to complete and the console window to display the message
- **Complete**.
+2.  Go to [*https://manage.windowsazure.com*](https://manage.windowsazure.com).
 
+3.  In the email address box, type the email address of your Microsoft account, in the password box, type the password of your Microsoft account, and then click **Sign In**.
 
+#### Task 7: View the data in the Azure SQL Database
 
- >  **Note:** The publish process is complete when
- the message “**Complete”** displays in the **Microsoft Azure Activity
- > Log**’s history console. The green circular indicator in the Activity
- Log does not indicate that the publish process is complete, but it
- indicates that the package is uploaded successfully.
+1.  In the navigation pane on the left side, scroll down, and then click **SQL Databases**.
 
+2.  At the top of the screen, click **Databases**. In the list of **SQL Databases**, click the **Name** of your SQL database with the prefix **db20532**.
 
+3.  At the top of the screen, click **Dashboard**.
 
-2. In the **Microsoft Azure Activity
-Log** console, click the hyperlink that directs you to the published web application.
+4.  Locate **quick glance** section and click on **Manage allowed IP Addresses**.
 
+5.  Click on **Next** arrow on the right side of **Current Client IP Address**, to add your host machine IP address to be whitelisted.
 
-3. Verify that the website
- displays the single event that you created in your Entity Framework
-context initializer.
+6.  Click on **Save** at the bottom of the page.
 
+    > **Note:** It might take couple of minutes for the firewall changes to get updated on server.
 
+7.  Open **View** &gt; **Server Explorer** on Visual Studio.
 
-#### Task 6:	Sign in to the Azure Management Portal
+8.  **Expand** the **Data Connections** node.
 
-1.  On the Start screen, click
- the **Internet Explorer** tile.
-
-
-2. Go to
-[*https://manage.windowsazure.com*](https://manage.windowsazure.com).
-
-
-3. In the email address box, type
- the email address of your Microsoft account, in the password box, type
-the password of your Microsoft account, and then click **Sign In**.
-
-
-
-#### Task 7:	View the data in the Azure SQL Database
-
-1.  In the navigation pane on
- the left side, scroll down, and then click **SQL Databases**.
-
-
-2. At the top of the screen, click
-**Databases**.
-In the list of **SQL
-Databases**, click the **Name** of your SQL database with the prefix
-**db20532**.
-
-
-3. At the top of the screen, click
-**Dashboard**.
-
-4. Locate **quick glance** section and click on **Manage allowed IP Addresses**.
-
-5. Click on **Next** arrow on the right side of **Current Client IP Address**, to add your host machine IP address to be whitelisted.
-
-6. Click on **Save** at the bottom of the page.
-
- >  **Note:** It might take couple of minutes for the firewall changes to get updated on server.
-
-7. Open **View** \> **Server Explorer** on Visual Studio.
-
-8. **Expand** the **Data Connections** node.
-
-9. Right click on **Data Connections** and click on **Add Connection**.
+9.  Right click on **Data Connections** and click on **Add Connection**.
 
 10. Choose **Microsoft SQL Server** for data source and click **Continue**.
 
 11. In the **Add Connection** wizard, provide following values and click **OK**.
 
- a.  In the **server name** box, type **sv20532[your name].database.windows.net**.
- 
- b. Select **Use SQL Server Authentication**.
- 
- c. In the **Username** box, type **testuser**.
+    a. In the **server name** box, type **sv20532\[your name\].database.windows.net**.
 
- d. In the **Password** box, type **TestPa\$\$w0rd**.
+    b. Select **Use SQL Server Authentication**.
 
- e. In the **database name** dropdown, select **db20532[your name]**.
- 
-  > **Note**: If firewall rule is not updated on server, it might throw error. You will have to wait for couple of more minutes and then proceed.
-  
-12. On Visual Studio **Server Explorer**, expand **Data Connections** \> **sv20532[your name].db20532[your name].dbo** \> **Tables**.
+    c. In the **Username** box, type **testuser**.
+
+    d. In the **Password** box, type **TestPa\\$\\$w0rd**.
+
+    e. In the **database name** dropdown, select **db20532\[your name\]**.
+
+    > **Note**: If firewall rule is not updated on server, it might throw error. You will have to wait for couple of more minutes and then proceed.
+
+12. On Visual Studio **Server Explorer**, expand **Data Connections** &gt; **sv20532\[your name\].db20532\[your name\].dbo** &gt; **Tables**.
 
 13. Right click **Tables** and click **Refresh**.
 
@@ -531,41 +312,18 @@ Databases**, click the **Name** of your SQL database with the prefix
 
 15. Right click **Events** table, and click **Show Table Data**.
 
-16. In the **dbo.Events** table,
-view the single record.
+16. In the **dbo.Events** table, view the single record.
 
 17. Close the **Events** table window.
 
-18. Close the **Internet Explorer**
-application.
+18. Close the **Internet Explorer** application.
 
-19. Close the **Contoso.Events –
-Microsoft Visual Studio** window.
+19. Close the **Contoso.Events – Microsoft Visual Studio** window.
 
+> **Results**: After completing this exercise, you will have configured Entity Framework to initialize a new database with seed data.
 
+------------------------------------------------------------------------
 
->  **Results**: After completing this exercise, you will have configured
-Entity Framework to initialize a new database with seed data.
+©2014 Microsoft Corporation. All rights reserved. The text in this document is available under the [Creative Commons Attribution 3.0 License](https://creativecommons.org/licenses/by/3.0/legalcode), additional terms may apply. All other content contained in this document (including, without limitation, trademarks, logos, images, etc.) are ***not*** included within the Creative Commons license grant. This document does not provide you with any legal rights to any intellectual property in any Microsoft product. You may copy and use this document for your internal, reference purposes.
 
-** **
-
-
-
-©2014 Microsoft Corporation. All rights reserved. The text in this
- document is available under the [Creative Commons Attribution 3.0
-License](https://creativecommons.org/licenses/by/3.0/legalcode),
-additional terms may apply. All other content contained in this
- document (including, without limitation, trademarks, logos, images,
-etc.) are ***not*** included within the Creative Commons license grant. 
-This document does not provide you with any legal rights to any
-intellectual property in any Microsoft product. You may copy and use
-this document for your internal, reference purposes. 
-
-
-
-This document is provided "as-is." Information and views expressed in
-this document, including URL and other Internet Web site references, may
-change without notice. You bear the risk of using it. Some examples are
-for illustration only and are fictitious. No real association is
-intended or inferred. Microsoft makes no warranties, express or implied,
-with respect to the information provided here.
+This document is provided "as-is." Information and views expressed in this document, including URL and other Internet Web site references, may change without notice. You bear the risk of using it. Some examples are for illustration only and are fictitious. No real association is intended or inferred. Microsoft makes no warranties, express or implied, with respect to the information provided here.
