--- a/Instructions/dotnet/Mod07/20532B_LAB_AK_07.md
+++ b/Instructions/dotnet/Mod07/20532B_LAB_AK_07.md
@@ -1,808 +1,461 @@
-﻿# Module 8: Storing and Consuming Files from Azure Storage
-
-
+# Module 8: Storing and Consuming Files from Azure Storage
 
 # Lab: Storing Generated Documents in Azure Storage Blobs
 
-
-
-## Exercise 1:	Implementing Azure Storage Blobs
-
-
+## Exercise 1: Implementing Azure Storage Blobs
 
 #### Task 1: Sign in to the Azure Portal
 
-1.  On the Start screen, click the
-    **Internet Explorer** tile.
+1.  On the Start screen, click the **Internet Explorer** tile.
 
+2.  Go to <https://portal.azure.com>
 
-2.  Go to
-    <https://portal.azure.com>
-
-
-3.  Type the email address of your 
-    Microsoft account.
-
+3.  Type the email address of your Microsoft account.
 
 4.  Click **Continue**.
 
-
-5.  Type the password for your 
-    Microsoft account.
-
+5.  Type the password for your Microsoft account.
 
 6.  Click **Sign In**.
 
+#### Task 2: Create a container by using the Management Portal
 
+1.  In the navigation pane on the left side of the screen, scroll down, and then click **Browse**.
 
-#### Task 2:	Create a container by using the Management Portal
+2.  In the **Browse** blade that displays, click **Storage accounts**.
 
-1.  In the navigation pane on
-    the left side of the screen, scroll down, and then click **Browse**.
+3.  In the **Storage accounts** blade that displays, view the list of Storage instances.
 
+4.  In the list of Storage instances, locate the storage account with the prefix **stor20532**.
 
-2.  In the **Browse** blade that 
-    displays, click **Storage accounts**.
+5.  Click the name of the storage account to go to its dashboard.
 
+6.  In the **stor20532*\[Your Name Here*\]** blade that displays, click the **Containers** tile.
 
-3.  In the **Storage accounts ** blade that 
-    displays, view the list of Storage instances.
+7.  In the **Containers** blade that displays, view the list of your containers.
 
+8.  At the top of the blade, click **Add**.
 
-4.  In the list of Storage
-    instances, locate the storage account with the prefix **stor20532**.
+9.  In the **Add a container** blade that displays, perform the following steps:
 
+10. In the **Name** box, type **example**.
 
-5.  Click the name of the storage 
-    account to go to its dashboard.
+11. In the **Access Type** list, select **Container**.
 
+12. Click **OK** to create your container.
 
-6.  In the **stor20532*[Your Name
-    Here*]** blade that displays, click the **Containers** tile.
+#### Task 3: Add and access blob files in your container
 
+1.  On the Start screen, click the **Visual Studio 2015** tile.
 
-7.  In the **Containers** blade
-    that displays, view the list of your containers.
-
-
-8.  At the top of the blade, click
-    **Add**.
-
-
-9.  In the **Add a container**
-    blade that displays, perform the following steps:
-
-
-
-10.  In the **Name** box, type
-     **example**.
-
-
-11.  In the **Access Type** list,
-     select **Container**.
-
-
-12.  Click **OK** to create your
-     container.
-
-
-
-#### Task 3:	Add and access blob files in your container
-
-1.  On the Start screen, click
-    the **Visual Studio 2015** tile.
-
-
-2.  On the **View** menu, click
-    **Cloud Explorer**.
-
+2.  On the **View** menu, click **Cloud Explorer**.
 
 3.  Expand the **Storage Accounts** node.
 
+    > **Note:** If you have not previously indicated that you want Visual Studio to remember your credentials, you will be prompted to enter your Microsoft account username and password to continue.
 
+4.  Expand the **stor20532*\[Your Name\]*** account node under the **Storage Accounts** node.
 
-
- >  **Note:** If you have not previously indicated
-  that you want Visual Studio to remember your credentials, you will be
-  prompted to enter your Microsoft account username and password to
-  continue.
-
-
-
-4.  Expand the **stor20532*[Your
-    Name]*** account node under the **Storage Accounts** node.
-
-
-5.  Expand the **Blobs** node 
-    under your storage account’s node.
-
+5.  Expand the **Blobs** node under your storage account’s node.
 
 6.  Double-click **example**.
 
+7.  In the example \[Container\] tab, click Upload Blob.
 
-7.  In the example [Container]
-    tab, click Upload Blob.
+    > **Note:** The icon on the upload button includes an arrow that is pointing upward to a horizontal line.
 
+8.  In the **Upload New File** dialog box, perform the following steps:
 
+    a. Click the **Browse** button.
 
- >  **Note:** The icon on the upload button includes
-  an arrow that is pointing upward to a horizontal line.
+    b. Go to the **(F):\\Mod08\\LabFiles\\Starter\\** directory.
 
+    c. Click the **samplefile** text document.
 
+    d. Click **Open**.
 
-8.  In the **Upload New File**
-    dialog box, perform the following steps:
+    e. Click **OK**.
 
+9.  Switch to the Internet Explorer window.
 
+10. In a new tab, type the following URL by replacing **\[*storage account*\]** with the name of your storage account:
 
- a.  Click the **Browse**
-     button.
+    ```
+    https://[*storage account*].blob.core.windows.net/example/samplefile.txt
+    ```
 
+11. Verify that the text **This is your sample file!** displays in the browser.
 
- b.  Go to the
-     **(F):\\Mod08\\LabFiles\\Starter\\** directory.
+    > **Results**: After completing this exercise, you will have created a blob container by using the Management Portal and viewed the blobs in the container.
 
+## Exercise 2: Populating the Container with Files and Media
 
- c.   Click the **samplefile** text
-     document.
+#### Task 1: Open the blob helper in the Web App worker project
 
+1.  On the Start screen, click the **Desktop**.
 
- d.   Click **Open**.
+2.  On the taskbar, click **File Explorer**.
 
- e.   Click **OK**.
+3.  In the Libraries window, go to **Allfiles (F):\\Mod08\\Labfiles\\Starter\\Contoso.Events**, and then double-click **Contoso.Events.sln**.
 
+4.  In the **Solution Explorer** pane, expand the **Roles** solution folder.
 
-9.  Switch to the Internet 
-    Explorer window.
+5.  In the Solution Explorer pane, expand the Contoso.Events.Worker project.
 
+6.  Double-click the **BlobStorageHelper.cs** file.
 
-10.  In a new tab, type the 
-     following URL by replacing **[*storage account*]** with the name of your
-     storage account:
+#### Task 2: Add Word documents to the container after they are created
 
-         https://[*storage account*].blob.core.windows.net/example/samplefile.txt
+1.  In the **BlobStorageHelper** class, find the method with the following signature:
 
+    ```
+        public Uri CreateBlob(MemoryStream stream, string eventKey)
+    ```
 
+2.  Remove the following single line of code in the class:
 
-11.  Verify that the text **This is
-     your sample file!** displays in the browser.
+    ```
+        return null;
+    ```
 
+3.  At the end of the **CreateBlob** method and before the closing parenthesis, create a new **CloudBlobContainer** for the **signin** container.
 
+    ```
+        CloudBlobContainer container =    _blobClient.GetContainerReference("signin");
+    ```
 
- >  **Results**: After completing this exercise, you will have created a 
- blob container by using the Management Portal and viewed the blobs in
- the container.
+4.  Call the **CreateIfNotExists** method of the *CloudBlobContainer* variable to ensure that the container exists**:**
 
+    ```
+        container.CreateIfNotExists();
+    ```
 
+5.  At the end of the **CreateBlob** method and before the closing parenthesis, create a new variable named *blobName*:
 
-## Exercise 2:	Populating the Container with Files and Media
+    ```
+        string blobName;
+    ```
 
+6.  Use the **String.Format** static method to create a string, and then assign the string to the *blobName* variable:
 
+    ```
+        blobName = String.Format("{0}_SignIn_{1:ddmmyyyss}.docx", eventKey,    DateTime.UtcNow);
+    ```
 
-#### Task 1:	Open the blob helper in the Web App worker project
+7.  At the end of the **CreateBlob** method and before the closing parenthesis, create a block blob reference by using the **GetBlockBlobReference** method and the *blobName* variable as the parameter:
 
+    ```
+        ICloudBlob blob = container.GetBlockBlobReference(blobName);
+    ```
 
-1.  On the Start screen, click
-    the **Desktop**.
+8.  Use the **Seek** method of the *MemoryStream* variable to set the position of the stream to the beginning and offset the position by the value of **0**:
 
+    ```
+        stream.Seek(0, SeekOrigin.Begin);
+    ```
 
-2.  On the taskbar, click **File
-    Explorer**.
+9.  Use the **UploadFromStream** method of the **ICloudBlob** interface to upload the stream to the referenced blob:
 
+    ```
+        blob.UploadFromStream(stream);
+    ```
 
-3.  In the Libraries window, go to
-   **Allfiles (F):\\Mod08\\Labfiles\\Starter\\Contoso.Events**, and then
-    double-click **Contoso.Events.sln**.
+10. At the end of the **CreateBlob** method and before the closing parenthesis, add the following statement:
 
+    ```
+       return blob.Uri;
+    ```
 
-4.  In the **Solution Explorer**
-    pane, expand the **Roles** solution folder.
+> **Results**: After completing this exercise, you will have used the Azure Storage SDK to manage blobs and containers in your storage account.
 
+## Exercise 3: Retrieving Files and Media from the Container
 
-5.  In the Solution Explorer pane, 
-    expand the Contoso.Events.Worker project.
+#### Task 1: Download documents from blob storage and stream to the client
 
+1.  In the **Solution Explorer** pane, expand the **Shared** solution folder.
 
-6.  Double-click the
-    **BlobStorageHelper.cs** file.
+2.  In the Solution Explorer pane, expand the Contoso.Events.ViewModels project.
 
+3.  Double-click the **DownloadViewModel.cs** file.
 
+4.  In the **DownloadViewModel** class, find the method with the following signature:
 
-#### Task 2:	Add Word documents to the container after they are created
+    ```
+        public async Task<DownloadPayload> GetStream()
+    ```
 
-1.  In the
-    **BlobStorageHelper** class, find the method with the following
-    signature:
+5.  Remove the following single line of code in the class:
 
+    ```
+        return await Task.FromResult<DownloadPayload>(null);
+    ```
 
-            public Uri CreateBlob(MemoryStream stream, string eventKey)
+6.  At the end of the **GetStream** method and before the closing parenthesis, create a new **CloudBlobClient** variable for the *\_storageAccount* variable:
 
+    ```
+        CloudBlobClient blobClient = _storageAccount.CreateCloudBlobClient();
+    ```
 
+7.  Create a new **CloudBlobContainer** instance for the **signin** container by using the *CloudBlobClient* variable:
 
-2.  Remove the following single 
-    line of code in the class:
+    ```
+        CloudBlobContainer container =    blobClient.GetContainerReference("signin");
+    ```
 
+8.  Call the **CreateIfNotExists** method of the *CloudBlobContainer* variable to ensure that the container exists:
 
-            return null;
+    ```
+        container.CreateIfNotExists();
+    ```
 
+9.  At the end of the **GetStream** method and before the closing parenthesis, create a block blob reference by using the **GetBlockBlobReference** method and the *\_blobId* variable as the parameter:
 
+    ```
+        ICloudBlob blob = container.GetBlockBlobReference(_blobId);
+    ```
 
-3.  At the end of the
-   **CreateBlob** method and before the closing parenthesis, create a new
-   **CloudBlobContainer** for the **signin** container.
+10. Use the **OpenReadAsync** method of the *ICloudBlob* variable to create a **Stream** and store it in a variable:
 
+    ```
+       Stream blobStream = await blob.OpenReadAsync();
+    ```
 
-            CloudBlobContainer container =
-            _blobClient.GetContainerReference("signin");
+11. At the end of the **GetStream** method and before the closing parenthesis, create a new instance of the **DownloadPayload** class:
 
+    ```
+       DownloadPayload payload = new DownloadPayload();
+    ```
 
+12. Assign the **Stream** variable to the **DownloadPayload** variable’s **Stream** property:
 
-4.  Call the **CreateIfNotExists**
-      method of the *CloudBlobContainer* variable to ensure that the container
-      exists**:**
+    ```
+       payload.Stream = blobStream;
+    ```
 
-            container.CreateIfNotExists();
+13. Assign the *ICloudBlob* variable’s **Properties.ContentType** value to the *DownloadPayload* variable’s **ContentType** property:
 
+    ```
+       payload.ContentType = blob.Properties.ContentType;
+    ```
 
+14. Return the *DownloadPayload* variable:
 
-5.  At the end of the
-   **CreateBlob** method and before the closing parenthesis, create a new
-    variable named *blobName*:
+    ```
+       return payload;
+    ```
 
-            string blobName;
+#### Task 2: Generate the Test Data
 
+1.  On the Start screen, type **Azure Storage Emulator**.
 
+2.  Click the **Windows Azure Storage Emulator – v4.2** tile.
 
-6.  Use the **String.Format**
-    static method to create a string, and then assign the string to the
-    *blobName* variable:
+3.  Switch to **Contoso.Events – Microsoft Visual Studio** window.
 
-            blobName = String.Format("{0}_SignIn_{1:ddmmyyyss}.docx", eventKey,
-            DateTime.UtcNow);
+4.  In the **Solution Explorer** pane, right-click the **Contoso.Events.Data.Generation** project, point to **Debug**, and then click **Start New Instance**.
 
+#### Task 3: Download generated sign-in sheets from the blob storage
 
+1.  In the **Solution Explorer** pane, right-click the **Contoso.Events** solution, and then click **Properties**.
 
-7.  At the end of the
-   **CreateBlob** method and before the closing parenthesis, create a block 
-   blob reference by using the **GetBlockBlobReference** method and the
-   *blobName* variable as the parameter:
+2.  In the **Solution** ‘**Contoso.Events’** **Property Pages** dialog box, perform the following steps:
 
-            ICloudBlob blob = container.GetBlockBlobReference(blobName);
+    a. Make sure that **CommonProperties** =&gt; **Startup Project** is selected in the navigation menu on the left.
 
+    b. Select **Multiple startup projects**.
 
+    c. For **Contoso.Events.Cloud**, set the **Action** to **Start**.
 
-8.  Use the **Seek** method of the
-   *MemoryStream* variable to set the position of the stream to the
-    beginning and offset the position by the value of **0**:
+    d. For **Contoso.Events.Management**, set the **Action** to **Start without debugging**.
 
-            stream.Seek(0, SeekOrigin.Begin);
+    e. Ensure that all the remaining projects have their **Action** set to **None**.
 
+    f. Click **OK** to close the dialog box.
 
+3.  On the **Debug** menu, click **Start Debugging**.
 
-9.  Use the **UploadFromStream**
-    method of the **ICloudBlob** interface to upload the stream to the 
-    referenced blob:
+4.  In the Windows **notification area**, click the arrow to see the running applications.
 
-            blob.UploadFromStream(stream);
+5.  Locate **IIS Express*,*** and right-click the icon.
 
+6.  Point to **Contoso.Events.Management** under the **View Sites** header, and then click the URL under the **Browse Applications** header.
 
+7.  Point to **Contoso.Events.Cloud** under the **View Sites** header, and then click the URL under the **Browse Applications** header.
 
-10.  At the end of the
-    **CreateBlob** method and before the closing parenthesis, add the 
-    following statement:
+8.  On the home page for the **Administration** web application, click the button to view the list of events.
 
-            return blob.Uri;
+9.  Click the **Sign-In Sheet** button for any event in the list.
 
+10. View the sign-in page that notifies you that a sign-in sheet is being generated.
 
+11. Wait for one to two minutes, and then refresh the sign-in sheet page.
 
->  **Results**: After completing this exercise, you will have used the 
-Azure Storage SDK to manage blobs and containers in your storage
- account.
+12. Click **Sign-In Sheet** to download the sign-in sheet from the server.
 
+> **Results**: After completing this exercise, you will have downloaded blobs from your storage account by using the Azure Storage SDK.
 
+## Exercise 4: Specifying Permissions for the Container
 
-## Exercise 3:	Retrieving Files and Media from the Container
+#### Task 1: Modify Container Access using Server Explorer
 
+1.  On the desktop, click the Contoso.Events - Visual Studio 2015 window.
 
+2.  On the **Debug** menu, click **Stop Debugging**.
 
-#### Task 1:	Download documents from blob storage and stream to the client
-
-
-
-1.  In the **Solution
-    Explorer** pane, expand the **Shared** solution folder.
-
-
-2.  In the Solution Explorer pane,
-    expand the Contoso.Events.ViewModels project.
-
-
-3.  Double-click the
-    **DownloadViewModel.cs** file.
-
-
-4.  In the **DownloadViewModel**
-    class, find the method with the following signature:
-
-
-            public async Task<DownloadPayload> GetStream()
-
-
-
-5.  Remove the following single
-    line of code in the class:
-
-
-            return await Task.FromResult<DownloadPayload>(null);
-
-
-
-6.  At the end of the **GetStream**
-    method and before the closing parenthesis, create a new
-    **CloudBlobClient** variable for the *\_storageAccount* variable:
-
-
-            CloudBlobClient blobClient = _storageAccount.CreateCloudBlobClient();
-
-
-
-7.  Create a new
-    **CloudBlobContainer** instance for the **signin** container by using
-    the *CloudBlobClient* variable:
-
-
-            CloudBlobContainer container =
-            blobClient.GetContainerReference("signin");
-
-
-
-8.  Call the **CreateIfNotExists**
-    method of the *CloudBlobContainer* variable to ensure that the container
-    exists:
-
-            container.CreateIfNotExists();
-
-
-
-9.  At the end of the **GetStream**
-    method and before the closing parenthesis, create a block blob reference
-    by using the **GetBlockBlobReference** method and the *\_blobId*
-    variable as the parameter:
-
-
-            ICloudBlob blob = container.GetBlockBlobReference(_blobId);
-
-
-
-10.  Use the **OpenReadAsync**
-     method of the *ICloudBlob* variable to create a **Stream** and store it
-     in a variable:
-
-            Stream blobStream = await blob.OpenReadAsync();
-
-
-
-11.  At the end of the **GetStream**
-     method and before the closing parenthesis, create a new instance of the
-     **DownloadPayload** class:
-
-
-            DownloadPayload payload = new DownloadPayload();
-
-
-
-12.  Assign the **Stream** variable
-     to the **DownloadPayload** variable’s **Stream** property:
-
-
-            payload.Stream = blobStream;
-
-
-
-13.  Assign the *ICloudBlob*
-     variable’s **Properties.ContentType** value to the *DownloadPayload*
-     variable’s **ContentType** property:
-
-
-            payload.ContentType = blob.Properties.ContentType;
-
-
-
-14.  Return the *DownloadPayload*
-     variable:
-
-
-            return payload;
-
-
-
-#### Task 2:	Generate the Test Data
-
-
-
-1.  On the Start screen, type
-    **Azure Storage Emulator**.
-
-
-2.  Click the **Windows Azure
-    Storage Emulator – v4.2** tile.
-
-
-3.  Switch to **Contoso.Events –
-    Microsoft Visual Studio** window.
-
-
-4.  In the **Solution Explorer**
-    pane, right-click the **Contoso.Events.Data.Generation** project, point 
-    to **Debug**, and then click **Start New Instance**.
-
-
-
-#### Task 3:	Download generated sign-in sheets from the blob storage
-
-1.  In the **Solution
- Explorer** pane, right-click the **Contoso.Events** solution, and
- then click **Properties**.
-
-
-
-2.  In the **Solution**
-    ‘**Contoso.Events’** **Property Pages** dialog box, perform the
-    following steps:
-
-
-   a.  Make sure that
-       **CommonProperties** =\> **Startup Project** is selected in the
-       navigation menu on the left.
-
-   b.  Select **Multiple startup
-       projects**.
-
-
-   c.  For **Contoso.Events.Cloud**,
-       set the **Action** to **Start**.
-
-
-   d.  For
-       **Contoso.Events.Management**, set the **Action** to **Start without
-       debugging**.
-
-
-   e.  Ensure that all the remaining 
-       projects have their **Action** set to **None**.
-
-
-   f.  Click **OK** to close the 
-       dialog box.
-
-
-3.  On the **Debug** menu, click
-    **Start Debugging**.
-
-
-4.  In the Windows **notification
-    area**, click the arrow to see the running applications.
-
-
-5.  Locate **IIS Express*,*** and
-     right-click the icon.
-
-
-6.  Point to
-    **Contoso.Events.Management** under the **View Sites** header, and then 
-    click the URL under the **Browse Applications** header.
-
-
-7.  Point to
-    **Contoso.Events.Cloud** under the **View Sites** header, and then click 
-    the URL under the **Browse Applications** header.
-
-
-8.  On the home page for the
-    **Administration** web application, click the button to view the list of
-    events.
-
-
-9.  Click the **Sign-In Sheet**
-    button for any event in the list.
-
-
-10.  View the sign-in page that
-     notifies you that a sign-in sheet is being generated.
-
-
-11.  Wait for one to two minutes,
-     and then refresh the sign-in sheet page.
-
-
-12.  Click **Sign-In Sheet** to
-     download the sign-in sheet from the server.
-
-
-
->  **Results**: After completing this exercise, you will have downloaded 
-blobs from your storage account by using the Azure Storage SDK.
-
-
-
-## Exercise 4:	Specifying Permissions for the Container
-
-
-
-#### Task 1:	Modify Container Access using Server Explorer
-
-
-
-1.  On the desktop, click the
-    Contoso.Events - Visual Studio 2015 window.
-
-
-2.  On the **Debug** menu, click
-    **Stop Debugging**.
-
-
-3.  On the **View** menu, click
-    **Cloud Explorer**.
-
-
-
+3.  On the **View** menu, click **Cloud Explorer**.
 
 4.  Expand the **Storage Accounts** node.
 
+5.  Expand the **Development** account node under the **Storage Accounts** node.
 
+6.  Expand the **Blobs** node under **Development** account node.
 
-5.  Expand the **Development**
-    account node under the **Storage Accounts** node.
+7.  Select the **signin** container, and then click **Properties Tab** below.
 
+8.  In the **Properties** pane, locate **Public Read Access**.
 
-6.  Expand the **Blobs** node under
-    **Development** account node.
+9.  Ensure that the value of the **Public Read Access** property is set to **Off**.
 
+#### Task 2: Generate temporary SAS tokens by using the SDK
 
-7.  Select the **signin**
-    container, and then click **Properties Tab** below.
+1.  In the **Solution Explorer** pane, expand the **Shared** solution folder.
 
+2.  In the **Solution Explorer** pane, expand the **Contoso.Events.ViewModels** project.
 
-8.  In the **Properties** pane,
-    locate **Public Read Access**.
+3.  Double-click the **DownloadViewModel.cs** file.
 
+4.  In the **DownloadViewModel** class, find the method with the following signature:
 
-9.  Ensure that the value of the
-    **Public Read Access** property is set to **Off**.
+    ```
+        public async Task<string> GetSecureUrl()
+    ```
 
+5.  Remove the single line of code in the class:
 
+    ```
+      return await Task.FromResult<string>(String.Empty);
+    ```
 
-#### Task 2:	Generate temporary SAS tokens by using the SDK
+6.  At the end of the **GetSecureUrl** method and before the closing parenthesis, create a new **CloudBlobClient** for the *\_storageAccount* variable.
 
+    ```
+        CloudBlobClient blobClient = \_storageAccount.CreateCloudBlobClient();
+    ```
 
-1.  In the **Solution
-    Explorer** pane, expand the **Shared** solution folder.
+7.  Create a new **CloudBlobContainer** for the **signin** container by using the *CloudBlobClient* variable.
 
+    ```
+        CloudBlobContainer container =    blobClient.GetContainerReference("signin");
+    ```
 
-2.  In the **Solution Explorer**
-    pane, expand the **Contoso.Events.ViewModels** project.
+8.  Call the **CreateIfNotExists** method of the *CloudBlobContainer* variable to ensure that the container exists**:**
 
+    ```
+        container.CreateIfNotExists();
+    ```
 
-3.  Double-click the
-    **DownloadViewModel.cs** file.
+9.  At the end of the **GetSecureUrl** method and before the closing parenthesis, create a new instance of the **SharedAccessBlobPolicy** class:
 
+    ```
+        SharedAccessBlobPolicy blobPolicy = new SharedAccessBlobPolicy();
+    ```
 
-4.  In the **DownloadViewModel**
-    class, find the method with the following signature:
+10. Set the *SharedAccessBlobPolicy* variable’s **SharedAccessExpiryTime** property to 15 minutes from the current time:
 
+    ```
+       blobPolicy.SharedAccessExpiryTime = DateTime.Now.AddHours(0.25d);
+    ```
 
-            public async Task<string> GetSecureUrl()
+11. Set the *SharedAccessBlobPolicy* variable’s **Permissions** property to **SharedAccessBlobPermissions.Read**:
 
+    ```
+       blobPolicy.Permissions = SharedAccessBlobPermissions.Read;
+    ```
 
+12. At the end of the **GetSecureUrl** method and before the closing parenthesis, create a new instance of the **BlobContainerPermissions** class:
 
-5.  Remove the single line of code
-    in the class:
+    ```
+       BlobContainerPermissions blobPermissions = new   BlobContainerPermissions();
+    ```
 
+13. Add the newly created **SharedAccessBlobPolicy** to the *BlobContainerPermissions* variable’s **SharedAccessPolicy** with the key **“ReadBlobPolicy”**:
 
-          return await Task.FromResult<string>(String.Empty);
+    ```
+       blobPermissions.SharedAccessPolicies.Add("ReadBlobPolicy", blobPolicy);
+    ```
 
+14. Set the *BlobContainerPermissions* variable’s **PublicAccess** property to **BlobContainerPublicAccessType.Off**:
 
+    ```
+       blobPermissions.PublicAccess = BlobContainerPublicAccessType.Off;
+    ```
 
-6.  At the end of the
-    **GetSecureUrl** method and before the closing parenthesis, create a new
-    **CloudBlobClient** for the *\_storageAccount* variable.
+15. At the end of the **GetSecureUrl** method and before the closing parenthesis, call the asynchronous **SetPermissionsAsync** method of the *CloudBlobContainer* variable by using the *BlobContainerPermissions* variable as the parameter:
 
-            CloudBlobClient blobClient = \_storageAccount.CreateCloudBlobClient();
+    ```
+       await container.SetPermissionsAsync(blobPermissions);
+    ```
 
+16. Invoke the **GetSharedAccessSignature** method of the *CloudBlobContainer* variable by using a new instance of the **SharedAccessBlobPolicy** class as the first parameter and the **“ReadBlobPolicy”** key as the second parameter:
 
-7.  Create a new
-    **CloudBlobContainer** for the **signin** container by using the
-    *CloudBlobClient* variable.
+    ```
+       string sasToken = container.GetSharedAccessSignature(new   SharedAccessBlobPolicy(), "ReadBlobPolicy");
+    ```
 
-            CloudBlobContainer container =
-            blobClient.GetContainerReference("signin");
+17. At the end of the **GetSecureUrl** method and before the closing parenthesis, create a block blob reference by using the **GetBlockBlobReference** method and the *\_blobId* variable as the parameter:
 
+    ```
+       ICloudBlob blob = container.GetBlockBlobReference(_blobId);
+    ```
 
+18. Take the **Uri** property of the *ICloudBlob* variable and store it in a new *Uri* variable.
 
-8.  Call the **CreateIfNotExists**
-    method of the *CloudBlobContainer* variable to ensure that the container
-    exists**:**
+    ```
+       Uri blobUrl = blob.Uri;
+    ```
 
-            container.CreateIfNotExists();
+19. At the end of the **GetSecureUrl** method and before the closing parenthesis, concatenate the **AbsoluteUri** of the *Uri* variable and the *sasToken* variable:
 
+    ```
+        string secureUrl = blobUrl.AbsoluteUri + sasToken;
+    ```
 
+20. Return the string variable as the result of the method:
 
-9.  At the end of the
-    **GetSecureUrl** method and before the closing parenthesis, create a new
-    instance of the **SharedAccessBlobPolicy** class:
+    ```
+       return secureUrl;
+    ```
 
-            SharedAccessBlobPolicy blobPolicy = new SharedAccessBlobPolicy();
-
-
-
-10.  Set the
-      *SharedAccessBlobPolicy* variable’s **SharedAccessExpiryTime** property
-      to 15 minutes from the current time:
-
-            blobPolicy.SharedAccessExpiryTime = DateTime.Now.AddHours(0.25d);
-
-
-
-11.  Set the
-    *SharedAccessBlobPolicy* variable’s **Permissions** property to
-    **SharedAccessBlobPermissions.Read**:
-
-            blobPolicy.Permissions = SharedAccessBlobPermissions.Read;
-
-
-
-12.  At the end of the
-     **GetSecureUrl** method and before the closing parenthesis, create a new 
-     instance of the **BlobContainerPermissions** class:
-
-            BlobContainerPermissions blobPermissions = new
-            BlobContainerPermissions();
-
-
-
-13.  Add the newly created
-     **SharedAccessBlobPolicy** to the *BlobContainerPermissions* variable’s
-     **SharedAccessPolicy** with the key **“ReadBlobPolicy”**:
-
-            blobPermissions.SharedAccessPolicies.Add("ReadBlobPolicy", blobPolicy);
-
-
-
-14.  Set the
-     *BlobContainerPermissions* variable’s **PublicAccess** property to
-     **BlobContainerPublicAccessType.Off**:
-
-            blobPermissions.PublicAccess = BlobContainerPublicAccessType.Off;
-
-
-
-15.  At the end of the
-     **GetSecureUrl** method and before the closing parenthesis, call the 
-     asynchronous **SetPermissionsAsync** method of the *CloudBlobContainer*
-     variable by using the *BlobContainerPermissions* variable as the
-     parameter:
-
-            await container.SetPermissionsAsync(blobPermissions);
-
-
-
-16.  Invoke the
-      **GetSharedAccessSignature** method of the *CloudBlobContainer* variable
-      by using a new instance of the **SharedAccessBlobPolicy** class as the 
-      first parameter and the **“ReadBlobPolicy”** key as the second
-      parameter:
-
-            string sasToken = container.GetSharedAccessSignature(new
-            SharedAccessBlobPolicy(), "ReadBlobPolicy");
-
-
-17.  At the end of the
-     **GetSecureUrl** method and before the closing parenthesis, create a
-     block blob reference by using the **GetBlockBlobReference** method and 
-     the *\_blobId* variable as the parameter:
-
-            ICloudBlob blob = container.GetBlockBlobReference(_blobId);
-
-
-
-18.  Take the **Uri** property of
-     the *ICloudBlob* variable and store it in a new *Uri* variable.
-
-            Uri blobUrl = blob.Uri;
-
-19.  At the end of the
-     **GetSecureUrl** method and before the closing parenthesis, concatenate
-     the **AbsoluteUri** of the *Uri* variable and the *sasToken* variable:
-
-             string secureUrl = blobUrl.AbsoluteUri + sasToken;
-
-
-
-20.  Return the string variable as
-     the result of the method:
-
-            return secureUrl;
-
-
-
-#### Task 3:	Download documents from a protected container by using the SAS token
-
-
+#### Task 3: Download documents from a protected container by using the SAS token
 
 1.  On the **Debug** menu, click **Start Debugging**.
 
+2.  In the notification area, click the arrow to see the running applications.
 
-2.  In the notification area, click 
-    the arrow to see the running applications.
+3.  Locate **IIS Express**, and then right-click the icon.
 
+4.  Point to the **Contoso.Events.Management** option under the **View Sites** header, and then click the URL under the **Browse Applications** header.
 
-3.  Locate **IIS Express**, and
-    then right-click the icon.
+5.  On the home page for the **Administration** web application, click the button to view the list of events.
 
+6.  Click the **Sign-In Sheet** button for any event in the list.
 
-4.  Point to the
-   **Contoso.Events.Management** option under the **View Sites** header,
-   and then click the URL under the **Browse Applications** header.
+7.  View the sign-in page which notifies you that a sign-in sheet is being generated.
 
+8.  Wait for one or two minutes, and then refresh the sign-in sheet page.
 
-5.  On the home page for the
-    **Administration** web application, click the button to view the list of
-    events.
+9.  Click **Sign-In Sheet** to download the sign-in sheet from the server by using the blob Url.
 
+10. Close the **Internet Explorer** application.
 
-6.  Click the **Sign-In Sheet**
-    button for any event in the list.
+11. Close the **Contoso.Events - Visual Studio** application.
 
+12. Close the **Azure Storage Emulator** command prompt (cmd.exe).
 
-7.  View the sign-in page which
-    notifies you that a sign-in sheet is being generated.
+> **Results**: After completing this exercise, you will have modified the permissions of the containers and generated SAS tokens for the containers.
 
+****
 
-8.  Wait for one or two minutes, and
-    then refresh the sign-in sheet page.
+©2014 Microsoft Corporation. All rights reserved. The text in this document is available under the [Creative Commons Attribution 3.0 License](https://creativecommons.org/licenses/by/3.0/legalcode), additional terms may apply. All other content contained in this document (including, without limitation, trademarks, logos, images, etc.) are ***not*** included within the Creative Commons license grant. This document does not provide you with any legal rights to any intellectual property in any Microsoft product. You may copy and use this document for your internal, reference purposes.
 
-
-9.  Click **Sign-In Sheet** to 
-    download the sign-in sheet from the server by using the blob Url.
-
-
-10.  Close the **Internet Explorer**
-     application.
-
-
-11.  Close the **Contoso.Events -
-     Visual Studio** application.
-
-
-12.  Close the **Azure Storage
-     Emulator** command prompt (cmd.exe).
-
-
-
->  **Results**: After completing this exercise, you will have modified the
- permissions of the containers and generated SAS tokens for the
-containers.
-
-** 
-**
-
-
-
-©2014 Microsoft Corporation. All rights reserved.  The text in this
- document is available under the [Creative Commons Attribution 3.0
-License](https://creativecommons.org/licenses/by/3.0/legalcode),
-additional terms may apply. All other content contained in this
- document (including, without limitation, trademarks, logos, images,
-etc.) are ***not*** included within the Creative Commons license grant. 
-This document does not provide you with any legal rights to any
- intellectual property in any Microsoft product. You may copy and use
- this document for your internal, reference purposes. 
-
-
-
-This document is provided "as-is." Information and views expressed in 
-this document, including URL and other Internet Web site references, may
- change without notice. You bear the risk of using it. Some examples are 
-for illustration only and are fictitious. No real association is 
-intended or inferred. Microsoft makes no warranties, express or implied,
- with respect to the information provided here.
+This document is provided "as-is." Information and views expressed in this document, including URL and other Internet Web site references, may change without notice. You bear the risk of using it. Some examples are for illustration only and are fictitious. No real association is intended or inferred. Microsoft makes no warranties, express or implied, with respect to the information provided here.
