--- a/Instructions/dotnet/Mod02/20532B_LAB_AK_02.md
+++ b/Instructions/dotnet/Mod02/20532B_LAB_AK_02.md
@@ -120,9 +120,9 @@
 
 9. In the **Create VM** blade that displays, click **Summary** and click **OK** to create the virtual machine by using your specified configuration.
 
-  > **Note:** The creation of a new virtual machine can take anywhere between 10 to 15 minutes. You will see a notification on the        Startboard (home screen) when your virtual machine is created and running.
+  > **Note:** The creation of a new virtual machine can take anywhere between 10 to 15 minutes. You will see a notification on the        Dashboard (home screen) when your virtual machine is created and running.
 
-10. Select the newly created virtual machine from your Startboard.
+10. Select the newly created virtual machine from your Dashboard.
 
 11. In the **vm20532[Your Name Here]** blade, click the **Settings** button at the top of the blade.
 
