--- a/Instructions/dotnet/Mod03/20532B_LAB_AK_03.md
+++ b/Instructions/dotnet/Mod03/20532B_LAB_AK_03.md
@@ -1,14 +1,14 @@
 # Module 3: Hosting Web Applications on the Azure Platform
 
-# Lab: Creating an ASP.NET Website Using an Azure Web App
+# Lab: Creating an ASP.NET Web App Using an Azure Web App
 
-## Exercise 1: Creating an Azure Website
+## Exercise 1: Creating an Azure Web App
 
-#### Task 1: Create a Website instance by using the Management Portal
+#### Task 1: Create a Web App instance by using the Management Portal
 
 1.  On the Start screen, click the **Internet Explorer** tile.
 
-2.  Go to _[https://manage.windowsazure.com](https://manage.windowsazure.com)_.
+2.  Go to *(https://portal.azure.com)*.
 
 3.  In the email address box, type the email address of your Microsoft account.
 
@@ -18,57 +18,93 @@
 
 > **Note:** If this is your first time logging in to the Management Portal, you may be prompted with a “Welcome” dialog. You can safely close this dialog and continue.
 
-1.  In the navigation pane on the left side of the screen, click **Web App**.
+1.  In the navigation pane on the left side of the screen, click **New**.
 
-2.  Click **+New** button at the lower–left corner of the screen.
+2.  Select the **Web + Mobile** option.
 
-3.  Click **Custom Create**.
+1. Click the **See all** link to navigate to the *Marketplace*.
+
+3. Search for and select the **Web App + SQL** template.
+
+1. In the **Web App + SQL** blade, click the **Create** button.
 
 4.  In the form that displays, perform the following steps:
 
-    a. In the **App Service Plan** list, select **Create New App Service Plan**.
+    a. In the **App name** dialog box, create a unique name for your website.
 
-    b. In the **Region** list, select the region that is closest to your location.
+    b. In the **Resource Group** section, select the **Use existing** option and then select the **20532** Resource Group from the list.
 
-    c. In the **URL** dialog box, create a unique name for your website.
+    c. Select the **App Service plan** option.
 
-    d. In the **Database** list, select **Create a free SQL database**.
+    d. In the **App Service plan** blade, click the **Create New** button.
 
-    e. In the **DB Connection String Name** box, type **EventsContextConnectionString**.
+    e. In the next **App Service plan** blade, locate the **App Service plan** dialog box and provide the value **SamplePlan**.
 
-    f. Click the next arrow button.
+    b. In the **Location** list, select the region that is closest to your location.
 
-    g. In the **Name** box, type **EventsContextDB**.
+    c. Select the **Pricing tier** option.
 
-    h. In the **Server** box, click **New SQL database server**.
+    d. In the **Choose your pricing tier** blade, click the **View all** link.
 
-    i. In the **Server Login Name** dialog box, create a user name (**testuser**) for your administrative SQL user.
+    e. Locate and select the **Free** pricing tier.
 
-    j. In the **Server Login Password** and **Confirm Password** dialog boxes, create a password (**TestPa\$\$w0rd**) for your administrative SQL user.
+    f. Click the **Select** button.
 
-    k. Click the check mark button to create your Website and SQL database.
+    g. Back in the **App Service plan** blade, click the **OK** button.
 
-#### Task 2: Go to the newly created Website's placeholder page
+    h. Back in the **Web App + SQL** blade, click the **SQL Database** option.
 
-> **Note:** Creating a Website is typically very fast, but you have to wait for the Website to be created and running before you can go to the Website. When the Website is running, its status displays as Running in the **Websites** list.
+    i. In the **Database** blade, click the **Create a new database** option.
 
-1.  In the navigation page on the left side, click **Websites**.
+    j. In the **SQL Database** blade, locate the **Name** box and provide the value **EventsContextDB**.
 
-2.  In the **Websites** list, click the Website that you just created.
+    k. Select the **Pricing tier** option.
 
-3.  Click the **Dashboard** tab at the top of the screen.
+    l. In the **Pricing tier** blade, click the **View all** link.
 
-4.  Locate the **Quick Glance** section on the right side of the dashboard.
+    e. Locate and select the **Free** pricing tier.
 
-5.  Under the **Url** header, click the hyperlink to the Website.
+    f. Click the **Select** button.
 
-6.  Verify that the Website exists.
+    g. Back in the **SQL Database** blade, click the **Target server** option.
+
+    h. In the **Server** blade, click the **Create a new server** option.
+
+    i. In the **Server name** dialog box, create a unique name for your server instance.
+
+    i. In the **Server admin login** dialog box, create a user name (**testuser**) for your administrative SQL user.
+
+    j. In the **Password** and **Confirm Password** dialog boxes, create a password (**TestPa$$w0rd**) for your administrative SQL user.
+
+    b. In the **Location** list, select the region that is closest to your location.
+
+    c. Click the **Select** button.
+
+    d. Back in the **SQL Database** blade, click the **Select** button.
+
+    k. Click the **Create** button to create your Web App and SQL database.
+
+#### Task 2: Go to the newly created Web App's placeholder page
+
+> **Note:** Creating a Web App is typically very fast, but you have to wait for the Web App to be created and running before you can go to the Web App. When the Web App is running, its status displays as Running in the **Web Apps** list.
+
+1.  In the navigation page on the left side, click **Browse**.
+
+2. Scroll-down, locate and select the **App Services** option.
+
+2.  In the **App Services** list, click the Web App that you just created.
+
+3.  Click the **Essentials** panel at the top of the blade.
+
+5.  Under the **Url** header, click the hyperlink to the Web App.
+
+6.  Verify that the Web App exists.
 
 7.  Close the tab displaying the website.
 
-> **Results:** After completing this exercise, you will have used the Management Portal to create Website instances. S
->
-> ## Exercise 2: Deploying an ASP.NET Web Application to an Azure Website
+> **Results:** After completing this exercise, you will have used the Azure Portal to create a Web App instance.
+
+## Exercise 2: Deploying an ASP.NET Web Application to an Azure Web App
 
 #### Task 1: Open an existing ASP.NET web application project with Visual Studio 2015
 
@@ -77,24 +113,6 @@
 2.  On the taskbar, click the **File Explorer** icon.
 
 3.  In the Libraries window, go to **Allfiles (F):\Mod03\Labfiles\Starter\Contoso.Events**, and then double-click **Contoso.Events.sln**.
-
-4.  If you get a prompt to install **SQL Server 2012 Express LocalDB**, then click on **Microsoft Download Center** link and install **SqlLocalDB.MSI** by following instructions.
-
-    a. Click on **Download** button.
-
-    b. Select **ENU\x64\SqlLocalDB.MSI** and click **Install**.
-
-    c. **Run** the downloaded MSI.
-
-    d. Click **Next** on the welcome screen.
-
-    e. Select **I accept** on license screen and click **Next**.
-
-    f. Click **Install**.
-
-    g. Wait for installation to succeed and click **Finish**
-
-    h. Close Visual Studio and open the **Contoso.Events.sln** once again.
 
 5.  In the **Solution Explorer** pane, right-click the **Contoso.Events.Management** project, and then click **Set as Startup Project**.
 
@@ -108,13 +126,13 @@
 
 9.  Verify that the Events page displays a list of events.
 
-10.  Close the tab displaying the Website.
+10.  Close the tab displaying the Web App.
 
-#### Task 2: Download the publish profile for the Azure Website
+#### Task 2: Download the publish profile for the Azure Web App
 
 1.  On the Start screen, click the **Internet Explorer** tile.
 
-2.  Go to [_https://manage.windowsazure.com_](https://manage.windowsazure.com).
+2.  Go to (https://portal.azure.com).
 
 3.  In the email address box, type the email address of your Microsoft account.
 
@@ -122,19 +140,21 @@
 
 5.  Click **Sign In**
 
-6.  In the **Websites** list, click the Website that you just created.
+1.  In the navigation page on the left side, click **Browse**.
 
-7.  Click the **Dashboard** tab.
+2. Scroll-down, locate and select the **App Services** option.
 
-8.  Locate the **Quick Glance** section on the right side of the dashboard.
+2.  In the **App Services** list, click the Web App that you just created.
 
-9.  Click **Download the publish profile**.
+3. Click the **More** button at the top of the blade.
+
+9.  Click the **Get publish profile** option.
 
 10.  In the download dialog box, click the arrow to the right of the **Save** button, and then click **Save As**.
 
 11.  In the **Save As** dialog box, go to **Allfiles (F):\Mod03\Labfiles**, and then click **Save**.
 
-#### Task 3: Publish the ASP.NET web application to the Azure Website
+#### Task 3: Publish the ASP.NET web application to the Azure Web App
 
 1.  In the **Solution Explorer** pane of the Contoso.Events - Microsoft Visual Studio window, right-click **Contoso.Events.Management**, and then click **Publish**.
 
@@ -146,7 +166,7 @@
 
 5.  Click **OK**.
 
-6.  Verify that the **Site Name** dialog box matches your Website’s name.
+6.  Verify that the **Site Name** dialog box matches your Web App’s name.
 
 7.  Click **Publish**.
 
@@ -160,11 +180,11 @@
 
 3.  Verify that the **Events** page displays a list of events.
 
-4.  Close the tab displaying the Website.
+4.  Close the tab displaying the Web App.
 
-> **Results:** After completing this exercise, you will have used a publish profile to publish web applications directly to a Website.
+> **Results:** After completing this exercise, you will have used a publish profile to publish web applications directly to a Web App.
 
-## Exercise 3: Configuring an Azure Website
+## Exercise 3: Configuring an Azure Web App
 
 #### Task 1: Implement logic to read a configuration setting from app settings
 
@@ -174,11 +194,15 @@
 
 3.  **Locate** the following code in line 20 of EventsListViewModel.cs:
 
-    **this.EventCount = 3;**
+    ```
+    this.EventCount = 3;
+    ```
 
 4.  **Replace** the line of code with the following code:
 
-    **this.EventCount = Int32.Parse(ConfigurationManager.AppSettings["EventsListViewModel.EventCount"]);**
+    ```
+    this.EventCount = Int32.Parse(ConfigurationManager.AppSettings["EventsListViewModel.EventCount"]);
+    ```
 
 5.  In the **Solution Explorer** pane of the Contoso.Events - Microsoft Visual Studio window, expand the **Contoso.Events.Management** project.
 
@@ -186,15 +210,17 @@
 
 7.  In the **appSettings** element, in line 14, add the following line of code:
 
-    **&lt;add value="5" \="" key="EventsListViewModel.EventCount"></add>**
+    ```
+    <add key="EventsListViewModel.EventCount" value="5" />
+    ```
 
 8.  On the **Debug** menu, click **Start Debugging**.
 
 9.  On the home page of the web application, verify that a list of five events displays under the **Latest 5 Events** header.
 
-10.  Close the tab displaying the Website.
+10.  Close the tab displaying the Web App.
 
-#### Task 2: Publish web application to the Azure Website
+#### Task 2: Publish web application to the Azure Web App
 
 1.  In the **Solution Explorer** pane of the Contoso.Events - Microsoft Visual Studio window, right-click **Contoso.Events.Management**, and then click **Publish**.
 
@@ -202,13 +228,13 @@
 
 3.  On the home page of the web application, verify that a list of five events displays under the **Latest 5 Events** header.
 
-4.  Close the tab displaying the Website.
+4.  Close the tab displaying the Web App.
 
 #### Task 3: Modify the app settings in the Management Portal
 
 1.  On the Start screen, click the **Internet Explorer** tile.
 
-2.  Go to [_https://manage.windowsazure.com_](https://manage.windowsazure.com).
+2.  Go to (*https://portal.azure.com*).
 
 3.  In the email address box, type the email address of your Microsoft account.
 
@@ -216,11 +242,17 @@
 
 5.  Click **Sign In**.
 
-6.  In the **Websites** list, click the website that you just created.
+1.  In the navigation page on the left side, click **Browse**.
 
-7.  Click the **Configure** tab.
+2. Scroll-down, locate and select the **App Services** option.
 
-8.  Scroll down to the **App Settings** section.
+2.  In the **App Services** list, click the Web App that you just created.
+
+3. In your *Web App*'s blade, click the **Settings** button at the top of the blade.
+
+4. In the **Settings** blade, scroll-down and select the **Application settings** option.
+
+8.  In the **Application settings** blade, scroll-down to the **App Settings** section.
 
 9.  In the **Key** box, type **EventsListViewModel.EventCount**.
 
@@ -232,21 +264,22 @@
 
 #### Task 4: Verify that the app settings are successfully updated
 
-1.  Click the **Dashboard** tab at the top of the screen.
+1.  Return to your *Web App*'s blade.
 
-2.  Locate the **Quick Glance** section on the right side of the dashboard.
+2. Locate the **Essentials** panel at the top of the blade.
 
-3.  Under the **Site Url** header, click the hyperlink to the website.
+
+5.  Under the **Url** header, click the hyperlink to the Web App.
 
 4.  On the home page of the web application, verify that a list of two events displays under the **Latest 2 Events** header.
 
-5.  Close the tab displaying the Website.
+5.  Close the tab displaying the Web App.
 
 6.  Close the **Internet Explorer** application.
 
 7.  Close the **Contoso.Events - Microsoft Visual Studio** application.
 
-> **Results:** After completing this exercise, you will have configured custom app settings by using a Web.config file and the Management Portal.
+> **Results:** After completing this exercise, you will have configured custom app settings by using a Web.config file and the Azure Portal.
 
 ©2014 Microsoft Corporation. All rights reserved. The text in this document is available under the [Creative Commons Attribution 3.0 License](https://creativecommons.org/licenses/by/3.0/legalcode), additional terms may apply. All other content contained in this document (including, without limitation, trademarks, logos, images, etc.) are **_not_** included within the Creative Commons license grant. This document does not provide you with any legal rights to any intellectual property in any Microsoft product. You may copy and use this document for your internal, reference purposes.
 
