Fixed formatting for all labs

--- a/Instructions/dotnet/Mod02/20532B_LAB_AK_02.md
+++ b/Instructions/dotnet/Mod02/20532B_LAB_AK_02.md
@@ -290,7 +290,7 @@
 
 16. In the **Internet Explorer** download dialog box, click **Save**.
 
-  > The download of the AllFiles executable typically takes around five minutes.
+  > **Note:** The download of the AllFiles executable typically takes around five minutes.
 
 17. Click the **Windows File Explorer** icon in your Taskbar.
 
