--- a/Instructions/dotnet/Mod09/20532B_LAB_09.md
+++ b/Instructions/dotnet/Mod09/20532B_LAB_09.md
@@ -30,7 +30,7 @@ Prior to starting this lab, you must have completed the lab in **Module 2**.
 
 2.  In Remote Desktop Connection, provide the name of your virtual machine or IP Address in the **Computer** box by using the following format:
 
-    **vm20532\[*Your Name Here*\].cloudapp.net:\[*Your VM RDP Port*\]**
+    **[Your VM IP Address]:[*Your VM RDP Port*]**
 
     > **Note:** The name and port for your virtual machine might be saved in the Computer drop-down list. If this is the case, use this value instead of typing it in manually. If you are unsure about your virtual machine’s RDP port, use either of the Azure portals to find your virtual machine’s endpoints. The endpoint with the name **Remote Desktop** is the correct port for RDP. This port is randomized to protect your virtual machine from unauthorized access.
 
